[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/TouchScreen/Thumbstick_Area.png" type="Texture" id=1]
[ext_resource path="res://Game_Objects/Mobile/MobileControls.gd" type="Script" id=2]
[ext_resource path="res://Assets/TouchScreen/Thumbstick.png" type="Texture" id=3]
[ext_resource path="res://Game_Objects/Mobile/LeftJoystick.gd" type="Script" id=4]
[ext_resource path="res://Game_Objects/Mobile/RightJoystick.gd" type="Script" id=5]
[ext_resource path="res://Assets/TouchScreen/Swap_Weapon.png" type="Texture" id=6]
[ext_resource path="res://Assets/TouchScreen/Reload_Button.png" type="Texture" id=7]
[ext_resource path="res://Assets/TouchScreen/Pause.png" type="Texture" id=8]
[ext_resource path="res://Assets/TouchScreen/Interact.png" type="Texture" id=9]
[ext_resource path="res://Assets/TouchScreen/Crosshair.png" type="Texture" id=10]

[sub_resource type="CircleShape2D" id=1]
radius = 64.0

[sub_resource type="CircleShape2D" id=2]
radius = 64.0

[sub_resource type="CircleShape2D" id=3]
radius = 64.0

[node name="MobileControls" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="LeftJoystick" type="TouchScreenButton" parent="." groups=["thumbsticks"]]
self_modulate = Color( 0.258824, 0.678431, 0.72549, 0.0745098 )
position = Vector2( 80, 264 )
normal = ExtResource( 1 )
shape = SubResource( 1 )
script = ExtResource( 4 )

[node name="InnerCircle" type="Sprite" parent="LeftJoystick"]
self_modulate = Color( 0.337255, 0.439216, 0.772549, 1 )
texture = ExtResource( 3 )
offset = Vector2( 64, 64 )

[node name="RightJoystick" type="TouchScreenButton" parent="." groups=["thumbsticks"]]
self_modulate = Color( 0.258824, 0.678431, 0.72549, 0.0745098 )
position = Vector2( 792, 264 )
normal = ExtResource( 1 )
shape = SubResource( 1 )
script = ExtResource( 5 )

[node name="InnerCircle" type="Sprite" parent="RightJoystick"]
self_modulate = Color( 1, 0.290196, 0.258824, 1 )
texture = ExtResource( 3 )
offset = Vector2( 64, 64 )

[node name="ReloadButton" type="TouchScreenButton" parent="."]
self_modulate = Color( 1, 1, 1, 0.490196 )
position = Vector2( 952, 128 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 1 )
shape = SubResource( 2 )
shape_visible = false
action = "reload_gun"

[node name="Sprite" type="Sprite" parent="ReloadButton"]
scale = Vector2( 4, 4 )
texture = ExtResource( 7 )
offset = Vector2( 16, 16 )

[node name="SwitchWeaponButton" type="TouchScreenButton" parent="."]
self_modulate = Color( 1, 1, 1, 0.490196 )
position = Vector2( 256, 376 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 1 )
shape = SubResource( 2 )
shape_visible = false
action = "switch_gun_right"

[node name="Sprite2" type="Sprite" parent="SwitchWeaponButton"]
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
offset = Vector2( 16, 16 )

[node name="InteractButton" type="TouchScreenButton" parent="."]
self_modulate = Color( 1, 1, 1, 0.490196 )
position = Vector2( 952, 216 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 1 )
shape = SubResource( 2 )
shape_visible = false
action = "fix_barricade"

[node name="Sprite2" type="Sprite" parent="InteractButton"]
scale = Vector2( 4, 4 )
texture = ExtResource( 9 )
offset = Vector2( 16, 16 )

[node name="ShootButton" type="TouchScreenButton" parent="."]
self_modulate = Color( 1, 1, 1, 0.490196 )
position = Vector2( 688, 376 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 1 )
shape = SubResource( 2 )
shape_visible = false
action = "shoot_gun_touchscreen"

[node name="Sprite2" type="Sprite" parent="ShootButton"]
scale = Vector2( 4, 4 )
texture = ExtResource( 10 )
offset = Vector2( 16, 16 )

[node name="PauseButton" type="TouchScreenButton" parent="."]
self_modulate = Color( 1, 1, 1, 0.490196 )
position = Vector2( 952, 8 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 1 )
shape = SubResource( 3 )
shape_visible = false
action = "pause_game"

[node name="Sprite3" type="Sprite" parent="PauseButton"]
scale = Vector2( 4, 4 )
texture = ExtResource( 8 )
offset = Vector2( 16, 16 )

[connection signal="pressed" from="LeftJoystick" to="LeftJoystick" method="_on_LeftJoystick_pressed"]
[connection signal="released" from="LeftJoystick" to="LeftJoystick" method="_on_LeftJoystick_released"]
[connection signal="pressed" from="RightJoystick" to="RightJoystick" method="_on_RightJoystick_pressed"]
[connection signal="released" from="RightJoystick" to="RightJoystick" method="_on_RightJoystick_released"]
